<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <ViewFlipper
        android:id="@+id/v_flipper"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp" >

    </ViewFlipper>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/aboutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/about"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/about" />

        <ImageButton
            android:id="@+id/discoverButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/discover"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/discover" />

        <ImageButton
            android:id="@+id/aroundButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/around"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/around" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/gallery"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/camera" />

        <ImageButton
            android:id="@+id/getButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/getthere"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/parking" />

        <ImageButton
            android:id="@+id/foodButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:contentDescription="@string/food"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/dish" />
    </LinearLayout>

    <WebView
        android:id="@+id/webView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="15dp"

        />

</LinearLayout>